--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -1181,6 +1181,10 @@
     "context": "dialog title",
     "string": "Delete categories"
   },
+  "src_dot_chooseFile": {
+    "context": "button",
+    "string": "Choose file"
+  },
   "src_dot_clear": {
     "context": "button",
     "string": "Clear"
